--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,10 +2,8 @@
 <head></head>
 <body>
   <h1>Hello from Koyeb</h1>
-  {% if names %}
-    {% for name in names %}
-      <h2>and hello to {{ name['name'] }}</h2>
-    {% endfor %}
+  {% if name %}
+      <h2>and hello to {{ name }}</h2>
   {% endif %}
 </body>
 </html>
