--- a/templates/hello.html
+++ b/templates/hello.html
@@ -4,6 +4,7 @@
   <h1>Hello from Koyeb</h1>
   {% if name %}
       <h2>and hello to {{ name }}</h2>
+      <p>{{ res }}</p>
   {% endif %}
 </body>
 </html>
