--- a/templates/hello.html
+++ b/templates/hello.html
@@ -3,8 +3,8 @@
 <body>
   <h1>Hello from Koyeb</h1>
   {% if name %}
-      <h2>and hello to {{ name }}</h2>
-      <p>{{ res }}</p>
+  <h2>and hello to {{ name }}</h2>
   {% endif %}
+  <p>{{ message }}</p>
 </body>
 </html>
