--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
   <div class="pt-4 text-center">
-    <h1>Hello from Koyeb</h1>
+    <h1>Hello World from Koyeb</h1>
     <a class="mt-5" href="/logout">logout</a>
   </div>
 {% endblock %}
