--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 {% block content %}
   <div class="pt-4 text-center">
     <h1>Alice say {{ pw }} ..</h1>
+    <h3>res {{ res }}</h3>
     <a class="mt-5" href="/logout">logout</a>
   </div>
 {% endblock %}
